<resources>
    <string name="app_name">Notification Manager</string>
    <string name="title_hint">Notification Title</string>
    <string name="notification_message_hint">Notification Message</string>
    <string name="create_notification">Create Notification</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_platform">Select Platform</string>
</resources>