<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint" />
    <EditText
        android:id="@+id/message_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notification_message_hint" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/time_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/select_time"
            android:gravity="center_vertical"
            android:textSize="18sp">
        </TextView>
        <ImageButton
            android:id="@+id/time_ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_alarm_24"
            android:backgroundTint="@color/purple_500">
        </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/date_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/select_date"
            android:gravity="center_vertical"
            android:textSize="18sp">
        </TextView>
        <ImageButton
            android:id="@+id/date_ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_today_24"
            android:backgroundTint="@color/purple_500">
        </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/platform_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/select_platform"
            android:gravity="center_vertical"
            android:textSize="18sp">
        </TextView>
        <Spinner
            android:id="@+id/platform_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <Button
        android:id="@+id/button_create_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/create_notification">
    </Button>

</LinearLayout>